<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_calculosguardados"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_calculos_guardados" />




        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_slideshow3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sugerencias" />
        <item
            android:id="@+id/nav_slideshow4"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ingenics_civil" />
        <item
            android:id="@+id/nav_slideshow5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ingenics" />
        <item
            android:id="@+id/nav_slideshow6"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contacto" />

    </group>
</menu>