<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pe.com.ingenics.mobile.materialdrower.ui.inicio.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pe.com.ingenics.mobile.materialdrower.ui.favoritos.GalleryFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pe.com.ingenics.mobile.materialdrower.ui.calculosGuardados.SlideshowFragment"
        android:label="@string/menu_calculos_guardados"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_notificaciones"
        android:name="pe.com.ingenics.mobile.materialdrower.ui.notificaciones.NotificacionesFragment"
        android:label="@string/menu_notificaciones"
        tools:layout="@layout/fragment_notificaciones" />
</navigation>